[package]
name = "servermiao"
version = "1.1.2"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = {version="0.6.5",default-features = false}
actix-web = {version="4.5.1",default-features = false,features=["macros"]}
local-ip-address = {version="0.6.1",default-features = false}

[profile.release]
#缩小编译后体积
strip = true
# strip = "debuginfo" #仅移除debug信息
lto = true #启用链接时间优化
panic = "abort" #panic时直接abort
opt-level = "z" #优化级别

[build-dependencies]
winres = {version="0.1.12",default-features = false}